--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -4,11 +4,6 @@
   position: relative;
 }
 
-.dropdown-toggle {
-  // Generate the caret automatically
-  @include caret;
-}
-
 // The dropdown menu
 .dropdown-menu {
   position: absolute;
@@ -29,6 +24,13 @@
   border: $dropdown-border-width solid $dropdown-border-color;
   @include border-radius($border-radius);
   @include box-shadow($dropdown-box-shadow);
+}
+
+.dropdown {
+  .dropdown-toggle {
+    // Generate the caret automatically
+    @include caret(down);
+  }
 }
 
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
